[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/scenes/ui/popups/scripts/pauseMenu.gd" type="Script" id=1]
[ext_resource path="res://src/scenes/ui/themes/BodyTheme.tres" type="Theme" id=2]
[ext_resource path="res://src/scenes/ui/themes/H4_Theme.tres" type="Theme" id=3]

[node name="pauseMenu" type="PopupDialog"]
pause_mode = 2
margin_right = 144.0
margin_bottom = 104.0
mouse_filter = 2
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 24.0
margin_top = 8.0
margin_right = 120.0
margin_bottom = 24.0
text = "Paused"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 120.0
margin_bottom = 100.0
theme = ExtResource( 2 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resetLevel" type="Button" parent="VBoxContainer"]
margin_top = 11.0
margin_right = 96.0
margin_bottom = 26.0
text = "Reset level"

[node name="mainMenu" type="Button" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 96.0
margin_bottom = 45.0
text = "Main menu"

[node name="cancel" type="Button" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 96.0
margin_bottom = 64.0
text = "Cancel"
[connection signal="about_to_show" from="." to="." method="_on_pauseMenu_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_pauseMenu_popup_hide"]
[connection signal="button_up" from="VBoxContainer/resetLevel" to="." method="_on_resetLevel_button_up"]
[connection signal="button_up" from="VBoxContainer/mainMenu" to="." method="_on_mainMenu_button_up"]
[connection signal="button_up" from="VBoxContainer/cancel" to="." method="_on_cancel_button_up"]
